# quizcrawler

./: .gitignore  Cargo.toml  README.md  README.org  borg.toml  org.toml  quizcrawler.asd
confs/: borg.toml  vocab.toml
crawler/: util.lisp
design/: Dispatcher.md
src/: lib.rs  main.rs
src/console/: cli.rs  data.rs  games.rs  mod.rs  persist.rs  render.rs  util.rs
src/console/snapshots/: quizcrawler__console__util__tests__compact_title_snapshot.snap  quizcrawler__console__util__tests__compact_title_symbols_snapshot.snap  quizcrawler__console__util__tests__compact_title_unicode_snapshot.snap
src/core/: data.rs  games.rs  logic.rs  mod.rs  quiz.rs
src/crawler/: data.rs  mod.rs  parse.rs  util.rs
tests/: core.rs  crawler.rs
tests/snapshots/: core__find_child_at_path.snap  crawler__parse_bullets.snap  crawler__parse_file.snap  crawler__parse_lists.snap  crawler__parse_multiline_terms.snap  crawler__parse_terms.snap
