[package]
name = "quizcrawler"
version = "0.1.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2018"

[dependencies]
clap = "*"
crossterm = "*"
onig = "*"
rand = "*"
structopt = "*"
toml = "*"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.tui]
git = "https://github.com/fdehau/tui-rs.git"
default-features = false
features = ["crossterm"]