[package]
name = "quizcrawler"
version = "0.1.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2018"

[dependencies]
clap = "*"
crossterm = "*"
derive_more = "*"
directories = "*"
onig = "*"
rand = "*"
ron = "*"
structopt = "*"
toml = "*"
unicode-segmentation = "*"

[dependencies.insta]
version = "*"
features = ["ron", "redactions"]

[dependencies.serde]
version = "*"
features = ["derive", "rc"]

[dependencies.tui]
git = "https://github.com/fdehau/tui-rs.git"
default-features = false
features = ["crossterm"]

[dependencies.uuid]
version = "*"
features = ["v4", "serde"]